--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccentDark">#B3FFFFFF</color>
     <color name="colorBackground">#303030</color>
+    <color name="cardsColor">#424242</color>
 </resources>
