--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,8 +50,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:menu_colorNormal="@color/colorPrimary"
-            app:menu_colorPressed="@color/colorAccent"
-            >
+            app:menu_colorPressed="@color/colorAccent">
 
             <com.github.clans.fab.FloatingActionButton
                 android:id="@+id/color_picker_fab"
@@ -61,8 +60,7 @@
                 app:fab_label="Pick custom colour"
                 app:fab_size="mini"
                 app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorAccent"
-                />
+                app:fab_colorPressed="@color/colorAccent"/>
 
             <com.github.clans.fab.FloatingActionButton
                 android:id="@+id/palette_picker_fab"
@@ -72,12 +70,9 @@
                 app:fab_label="Pick custom palette"
                 app:fab_size="mini"
                 app:fab_colorNormal="@color/colorPrimary"
-                app:fab_colorPressed="@color/colorAccent"
-                />
-
+                app:fab_colorPressed="@color/colorAccent"/>
         </com.github.clans.fab.FloatingActionMenu>
+
     </android.support.constraint.ConstraintLayout>
-
-
 
 </android.support.constraint.ConstraintLayout>
