--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,12 +74,15 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorAccentDark" />
 
-                    <TextView
-                        android:layout_width="match_parent"
+                    <Button
+                        android:background="?attr/selectableItemBackground"
+                        android:textAllCaps="false"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/standard_padding"
                         android:text="Make a new order"
                         android:textAlignment="center"
+                        android:layout_gravity="center"
                         android:textColor="@color/colorAccent" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -144,12 +147,15 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorAccentDark" />
 
-                    <TextView
-                        android:layout_width="match_parent"
+                    <Button
+                        android:background="?attr/selectableItemBackground"
+                        android:textAllCaps="false"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/standard_padding"
-                        android:text="Add a color"
+                        android:text="Add color"
                         android:textAlignment="center"
+                        android:layout_gravity="center"
                         android:textColor="@color/colorAccent" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -215,12 +221,15 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorAccentDark" />
 
-                    <TextView
-                        android:layout_width="match_parent"
+                    <Button
+                        android:background="?attr/selectableItemBackground"
+                        android:textAllCaps="false"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/standard_padding"
-                        android:text="Add a palette"
+                        android:text="Add palette"
                         android:textAlignment="center"
+                        android:layout_gravity="center"
                         android:textColor="@color/colorAccent" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
