--- a/app/src/main/res/layout/fragment_rgb.xml
+++ b/app/src/main/res/layout/fragment_rgb.xml
@@ -7,7 +7,6 @@
     tools:context="com.example.josegeorges.paintit.RGBFragment">
 
 
-
     <SeekBar
         android:id="@+id/red_value"
         android:layout_width="0dp"
@@ -20,8 +19,22 @@
         android:rotation="270"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/green_value"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <EditText
+        android:id="@+id/red_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/standard_margin"
+        android:layout_marginLeft="@dimen/standard_margin"
+        android:text="255"
+        android:inputType="number"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/red_value"/>
 
     <SeekBar
         android:id="@+id/green_value"
