--- a/app/src/main/res/layout/activity_pallete_picker.xml
+++ b/app/src/main/res/layout/activity_pallete_picker.xml
@@ -21,7 +21,7 @@
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/palette_colors_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="242dp"
         android:layout_gravity="center"
@@ -41,7 +41,7 @@
         app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recycler_view">
+        app:layout_constraintTop_toBottomOf="@id/palette_colors_recycler_view">
 
     </android.support.v4.view.ViewPager>
 
@@ -62,7 +62,7 @@
         android:layout_margin="16dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_camera_enhance_black_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
+        app:layout_constraintBottom_toBottomOf="@+id/palette_colors_recycler_view"
         app:layout_constraintRight_toRightOf="parent" />
 
 
