--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/register_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_close_black_24dp"/>
@@ -88,11 +89,13 @@
             android:layout_marginRight="@dimen/card_margin"/>
 
         <Button
+            android:id="@+id/register_button"
             android:layout_margin="@dimen/card_margin"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Register"
+            android:onClick="registerUser"
             android:textAllCaps="false"/>
 
 
