--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -34,6 +34,19 @@
         app:layout_constraintVertical_chainStyle="spread" />
 
 
+    <EditText
+        android:maxLines="1"
+        android:id="@+id/color_picker_color_name_edit_text"
+        android:layout_marginLeft="@dimen/card_margin"
+        android:layout_marginRight="@dimen/card_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Color Name"
+        app:layout_constraintTop_toBottomOf="@id/frame_layout"
+        app:layout_constraintLeft_toRightOf="parent"
+        android:textColorHint="@color/colorAccentDark"
+        android:textColor="@color/colorAccent"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
@@ -41,12 +54,12 @@
         app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/frame_layout">
+        app:layout_constraintTop_toBottomOf="@id/color_picker_color_name_edit_text">
 
     </android.support.v4.view.ViewPager>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/color_picker_confirm_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
