--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -35,23 +35,23 @@
 
 
     <EditText
-        android:maxLines="1"
         android:id="@+id/color_picker_color_name_edit_text"
-        android:layout_marginLeft="@dimen/card_margin"
-        android:layout_marginRight="@dimen/card_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Color Name"
-        app:layout_constraintTop_toBottomOf="@id/frame_layout"
-        app:layout_constraintLeft_toRightOf="parent"
+        android:maxLines="1"
+        android:layout_marginLeft="@dimen/card_margin"
+        android:layout_marginRight="@dimen/card_margin"
+        android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccentDark"
-        android:textColor="@color/colorAccent"/>
+        app:layout_constraintStart_toEndOf="@+id/viewPager"
+        app:layout_constraintTop_toBottomOf="@id/frame_layout" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/button"
+        app:layout_constraintBottom_toTopOf="@id/color_picker_confirm_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/color_picker_color_name_edit_text">
@@ -64,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Confirm"
+        android:onClick="addColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
