--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:background="@color/colorBackground"
     android:layout_height="match_parent"
+    android:id="@+id/main_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.josegeorges.paintit.MainActivity">
 
