--- a/app/src/main/res/layout/favourite_colours_items.xml
+++ b/app/src/main/res/layout/favourite_colours_items.xml
@@ -2,14 +2,15 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/standard_margin"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBackground">
+    android:background="@color/cardsColor">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/color_imageView"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_margin="@dimen/standard_margin"
         android:src="@color/colorAccent"
         android:layout_alignParentTop="true"
@@ -17,10 +18,11 @@
         android:layout_alignParentStart="true" />
 
     <TextView
+        android:id="@+id/favourite_color_name_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Color Name"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
