--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -144,6 +144,7 @@
                         android:visibility="gone" />
 
                     <TextView
+                        android:id="@+id/no_favourite_colors_textView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/standard_padding"
@@ -152,6 +153,7 @@
                         android:textColor="@color/colorAccentDark" />
 
                     <Button
+                        android:id="@+id/addColor_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
