--- a/app/src/main/res/layout/favourite_colours_items.xml
+++ b/app/src/main/res/layout/favourite_colours_items.xml
@@ -7,15 +7,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/cardsColor">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/color_imageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_margin="@dimen/standard_margin"
-        android:src="@color/colorAccent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/favourite_color_name_textView"
