--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -1,123 +1,59 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     tools:context="com.example.josegeorges.paintit.StoreFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <Button
+        android:id="@+id/glossPaintButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Gloss Paint"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/semiGlossPaintButton"
+        app:layout_constraintTop_toBottomOf="@id/guideline" />
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/card_margin"
-            android:layout_marginStart="@dimen/card_margin"
-            android:layout_marginTop="32dp"
-            android:background="@color/cardsColor"
-            android:layout_weight="1"
-            app:cardCornerRadius="@dimen/corner_radius">
+    <Button
+        android:id="@+id/semiGlossPaintButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Semi-Gloss Paint"
+        tools:layout_editor_absoluteY="232dp"
+        app:layout_constraintDimensionRatio="H,1:1"
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/glossPaintButton"
+        app:layout_constraintTop_toBottomOf="@id/guideline"/>
 
-        </android.support.v7.widget.CardView>
+    <Button
+        android:id="@+id/primerButton"
+        app:layout_constraintTop_toBottomOf="@id/glossPaintButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Primer"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/semiGlossPaintButton" />
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/card_margin"
-            android:layout_marginStart="@dimen/card_margin"
-            android:layout_marginTop="32dp"
-            android:background="@color/cardsColor"
-            android:layout_weight="1"
-            app:cardCornerRadius="@dimen/corner_radius">
+    <Button
+        android:id="@+id/eggshellButton"
+        app:layout_constraintTop_toBottomOf="@id/semiGlossPaintButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Eggshell"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/glossPaintButton" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/card_margin"
-            android:layout_marginStart="@dimen/card_margin"
-            android:layout_marginTop="32dp"
-            android:background="@color/cardsColor"
-            android:layout_weight="1"
-            app:cardCornerRadius="@dimen/corner_radius">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/card_margin"
-            android:layout_marginStart="@dimen/card_margin"
-            android:layout_marginTop="32dp"
-            android:background="@color/cardsColor"
-            android:layout_weight="1"
-            app:cardCornerRadius="@dimen/corner_radius">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/card_margin"
-            android:layout_marginStart="@dimen/card_margin"
-            android:layout_marginTop="32dp"
-            android:layout_weight="1"
-            android:background="@color/cardsColor"
-            app:cardCornerRadius="@dimen/corner_radius">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/card_margin"
-            android:layout_marginStart="@dimen/card_margin"
-            android:layout_marginTop="32dp"
-            android:layout_weight="1"
-            android:background="@color/cardsColor"
-            app:cardCornerRadius="@dimen/corner_radius">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-
-</LinearLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="70dp"
+        app:layout_constraintTop_toTopOf="parent" />
+</android.support.constraint.ConstraintLayout>
