#39 user stays logged in till he logs out

--- a/app/src/main/res/layout/fragment_settings_screen.xml
+++ b/app/src/main/res/layout/fragment_settings_screen.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"/>
 
     <Button
+        android:id="@+id/btn_logout"
         android:background="?attr/selectableItemBackground"
         android:textAllCaps="false"
         android:textAlignment="textStart"
