--- a/app/src/main/res/layout/paint_types_large.xml
+++ b/app/src/main/res/layout/paint_types_large.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/paintTypeContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -24,11 +25,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <Button
+            <ImageButton
                 android:id="@+id/interiorPaintButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Interior Paint" />
+                android:src="@drawable/interiorpaint" />
 
         </android.support.v7.widget.CardView>
 
@@ -38,11 +39,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <Button
+            <ImageButton
                 android:id="@+id/exteriorPaintButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Exterior Paint" />
+                android:src="@drawable/exteriorpaint"/>
 
         </android.support.v7.widget.CardView>
         <!--
@@ -65,11 +66,11 @@ two CardViews stainCardView and brushesCardView
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <Button
+            <ImageButton
                 android:id="@+id/stainButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Stain"/>
+                android:src="@drawable/stainsandfinishes"/>
 
         </android.support.v7.widget.CardView>
 
@@ -79,11 +80,11 @@ two CardViews stainCardView and brushesCardView
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <Button
+            <ImageButton
                 android:id="@+id/brushesButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Brushes & Rollers"/>
+                android:src="@drawable/brushesandrollers"/>
 
         </android.support.v7.widget.CardView>
     </LinearLayout>
