--- a/app/src/main/res/layout/favourite_colours_items.xml
+++ b/app/src/main/res/layout/favourite_colours_items.xml
@@ -19,13 +19,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/favourite_color_name_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="8dp"
+        android:inputType="none"
+        android:background="@color/cardsColor"
         android:text="Color Name"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
@@ -38,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="?attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/favourite_color_delete"
