--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#f4ad42</color>
     <color name="colorAccentDark">#B3FFFFFF</color>
     <color name="colorBackground">#303030</color>
     <color name="cardsColor">#424242</color>
