--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:textColorPrimary">@color/colorAccent</item>
+        <item name="android:textColorSecondary">@color/colorAccentDark</item>
+        <item name="android:textColor">@color/colorAccent</item>
     </style>
 
     <style name="PreferenceScreen" parent="Theme.AppCompat.Light.NoActionBar">
