#48 first registration page works decent and second has been added

--- a/app/src/main/res/layout/fragment_name_email_registration.xml
+++ b/app/src/main/res/layout/fragment_name_email_registration.xml
@@ -77,11 +77,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="First Name"
+            android:inputType="text"
             android:textColorHint="@color/colorAccentDark"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/button_background"
             app:layout_constraintBottom_toTopOf="@id/register_lastname"
             app:layout_constraintVertical_chainStyle="spread"/>
 
@@ -91,7 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Last Name"
-            android:background="@drawable/button_background"
+            android:inputType="text"
             android:textColorHint="@color/colorAccentDark"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -104,7 +104,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:background="@drawable/button_background"
             android:inputType="textEmailAddress"
             android:textColorHint="@color/colorAccentDark"
             app:layout_constraintLeft_toLeftOf="parent"
