Keegan and I organized the classes that will extend Item class. We now have only one adapter for the 4 recycler views in the store as well as only one fragment to represent them

--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.josegeorges.paintit.StainsFragment">
+    tools:context="com.example.josegeorges.paintit.ItemListFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/stains_recyclerView"
+        android:id="@+id/item_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
