--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView"
+    android:id="@+id/item_cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
@@ -17,22 +17,25 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/brushes_imageView"
+            android:id="@+id/item_imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            app:srcCompat="@drawable/ic_delete_black_24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
-            android:id="@+id/brushes_name"
-            android:layout_width="match_parent"
+            android:id="@+id/item_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Brushes Name"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
+            android:text="Item Name"
             android:textSize="25sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/brushes_imageView"
-            android:layout_marginLeft="16dp" />
+            app:layout_constraintLeft_toRightOf="@id/item_imageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
