--- a/app/src/main/res/layout/shopping_cart_item.xml
+++ b/app/src/main/res/layout/shopping_cart_item.xml
@@ -52,7 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="4dp"
+        android:layout_marginEnd="4dp"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/ic_delete_black_24dp" />
 
